--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 30
@@ -35,6 +34,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'C:\\Users\\asus\\Downloads\\YouTubeAndroidPlayerApi-1.2.2\\libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def jetpack_version = "2.1.0"
     def anko_version = '0.10.0'
     def arch_version = '2.2.0-alpha01'
@@ -53,6 +54,7 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
    // implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
