--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-android-extensions'
 
 }
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 30
@@ -87,7 +88,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestCompile "android.arch.core:core-testing:1.1.0"
     testImplementation 'org.robolectric:robolectric:4.0'
-    implementation 'com.airbnb.android:lottie:3.4.0'
+    def nav_version = "2.3.3"
+    //navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    //meterial disign
+    implementation 'com.google.android.material:material:1.3.0'
+
 
 
 
