--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Economist_clone">
         <activity android:name=".weekly.DescriptionActivity"></activity>
-        <activity android:name=".RecomendedActivity"></activity>
-=======
-        android:theme="@style/Theme.Economist_clone"
-        android:usesCleartextTraffic="true">
+<!--        <activity android:name=".RecomendedActivity"></activity>-->
+
+<!--        android:theme="@style/Theme.Economist_clone"-->
+
         <activity android:name=".firebase.LoginActivity" />
         <activity android:name=".firebase.SignUpActivity" />
->>>>>>> 7eb082bf82a1e269093a3e26578874ec551c46e8
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
