--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.economist_clone">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,17 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Economist_clone">
-        <activity android:name=".weekly.DescriptionActivity"></activity>
-<!--        <activity android:name=".RecomendedActivity"></activity>-->
-
-<!--        android:theme="@style/Theme.Economist_clone"-->
-
+        android:theme="@style/Theme.Economist_clone"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".weekly.DescriptionActivity" /> <!-- <activity android:name=".RecomendedActivity"></activity> -->
+        <!-- android:theme="@style/Theme.Economist_clone" -->
         <activity android:name=".firebase.LoginActivity" />
         <activity android:name=".firebase.SignUpActivity" />
-
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.splash_screen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
